# 2026-csc1097-donnelt6-szumlig2

./: .gitignore  .gitlab-ci.yml  README.md  netlify.toml  nixpacks.toml
src/apps/api/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
src/apps/api/app/: __init__.py  dependencies.py  main.py  schemas.py
src/apps/api/evals/: README.md  dataset.jsonl  run_eval.py
src/apps/api/migrations/: 001_init.sql  002_match_source_chunks.sql  003_auth_roles.sql  004_fix_hub_members_rls.sql  005_fix_hub_members_rls_functions.sql  006_reminders.sql  007_reminders_in_app_only.sql  008_hub_counts.sql  009_hub_last_accessed.sql  010_hub_favourite.sql  011_match_source_chunks_sources.sql  012_faq_entries.sql  013_guides.sql  014_match_source_chunks_embeddings.sql  015_source_suggestions.sql  016_persistent_chat_sessions.sql  026_content_topic_labels.sql
src/apps/api/tests/: README.md  conftest.py  test_access_router_helpers.py  test_activity_router.py  test_analytics_router.py  test_chat_router.py  test_config.py  test_dependencies.py  test_errors.py  test_faqs_router.py  test_guides_router.py  test_hubs_router.py  test_memberships_router.py  test_moderation_router.py  test_rate_limit.py  test_reminders_router.py  test_schemas.py  test_sources_router.py  test_store_activity.py  test_store_chat.py  test_store_faqs.py  test_store_guides.py  test_store_hubs.py  test_store_moderation.py  test_store_sources.py  test_users_router.py
src/apps/worker/: .env.example  README.md  pyproject.toml  requirements.txt
src/apps/worker/tests/: README.md  test_tasks.py
(+245 files in other folders)
