[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caddie-api"
version = "0.1.0"
description = "FastAPI service for Caddie"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.2,<1.0",
    "uvicorn[standard]>=0.30.5,<1.0",
    "pydantic>=2.8.2,<3.0",
    "email-validator>=2.1.1",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "supabase>=2.7.5",
    "openai>=1.51.0",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
observability = [
    "langfuse>=2.59.0",
]
evals = [
    "ragas>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
